# flutter_pdf_render

./: 16KB_PAGE_SIZE_SUPPORT.md
android/: CMakeLists.txt  build.gradle
example/android/: gradle.properties
example/android/app/: build.gradle
